# sionna-rk

./: .gitignore  .gitmodules  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  requirements.txt  requirements_doc.txt  requirements_orin.txt  requirements_thor.txt
doc/: Makefile  build_docs.sh  make.bat
patches/: oai-cn5g.patch  openairinterface5g.patch  tutorials.patch
plugins/: CMakeLists.txt
plugins/channel_emulation/: CMakeLists.txt  tutorial.yaml
plugins/channel_emulation/common/: channel_emulator.c  channel_emulator.h
plugins/channel_emulation/cuda_emulator/src/: CMakeLists.txt  chn_emu.c  chn_emu.h  chn_emu_cuda.cu  chn_emu_cuda.h  chn_emu_defs.h  chn_emu_extern.h  chn_emu_load.c
plugins/channel_emulation/cuda_emulator/tests/: CMakeLists.txt
plugins/channel_emulation/cuda_emulator/tests/unit/: conftest.py  test_channel_emulator.py
plugins/channel_emulation/data/pass_through_cir/: config.json  create_pass_through_cir.py
plugins/channel_emulation/doc/: channel_emulation.rst
plugins/channel_emulation/file_loader/src/: CMakeLists.txt  cir_file.c  cir_file.h  cir_file_defs.h  cir_file_extern.h  cir_file_load.c
plugins/channel_emulation/file_loader/tests/: CMakeLists.txt
plugins/channel_emulation/file_loader/tests/unit/: conftest.py  test_cir_file.py
plugins/channel_emulation/tests/integration/: run_integration.sh
plugins/channel_emulation/zmq_loader/scripts/: test_cir_zmq_live.py
plugins/channel_emulation/zmq_loader/src/: CMakeLists.txt  cir_zmq.c  cir_zmq.h  cir_zmq_defs.h  cir_zmq_extern.h  cir_zmq_load.c
plugins/channel_emulation/zmq_loader/tests/: CMakeLists.txt
plugins/channel_emulation/zmq_loader/tests/unit/: conftest.py  test_cir_zmq.py
plugins/common/: build_all_plugins.sh
plugins/common/src/: plugins.c  plugins.h
plugins/data_acquisition/: CMakeLists.txt  tutorial.yaml
plugins/data_acquisition/doc/: index.rst
plugins/data_acquisition/src/: nr_demapper_capture.c  nr_demapper_capture.h  nr_demapper_defs.h  nr_demapper_extern.h  nr_demapper_load.c  nr_demapper_orig.c  nr_demapper_orig.h
plugins/data_acquisition/tests/integration/: run_integration.sh
plugins/ldpc_cuda/: CMakeLists.txt  tutorial.yaml
plugins/ldpc_cuda/doc/: LDPC_background.ipynb  index.rst  ldpc_cuda.rst  ldpc_decoder.cu  numpy_decoder.py
plugins/ldpc_cuda/src/: nr_ldpc_cuda.c
plugins/ldpc_cuda/src/python/: numpy_decoder.ipynb  numpy_decoder.py  test_decoder_bler.ipynb
plugins/ldpc_cuda/src/runtime/: CMakeLists.txt  ldpc_decoder.cu  ldpc_tables_bg1.h  ldpc_tables_bg2.h
plugins/ldpc_cuda/tests/integration/: run_integration.sh
plugins/ldpc_cuda/tests/unit/: conftest.py  test_decoder.py
plugins/neural_demapper/: CMakeLists.txt  tutorial.yaml
plugins/neural_demapper/config/: demapper_trt.config  env.changes
plugins/neural_demapper/doc/: Neural_demapper.ipynb  accelerated_inference.rst  index.rst
plugins/neural_demapper/models/: neural_demapper_qam16_2.onnx
plugins/neural_demapper/scripts/: build-trt-plans.sh
plugins/neural_demapper/src/: nr_demapper_defs.h  nr_demapper_extern.h  nr_demapper_load.c  nr_demapper_trt.c  nr_demapper_trt.h
plugins/neural_demapper/src/runtime/: CMakeLists.txt  data_processing.cu  data_processing.h  trt_demapper.cpp
plugins/neural_demapper/tests/integration/: run_integration.sh
plugins/neural_demapper/tests/unit/: conftest.py  test_data_processing.py  test_demappers.py
plugins/neural_receiver/: CMakeLists.txt  tutorial.yaml
plugins/neural_receiver/doc/: index.rst
plugins/neural_receiver/models/: nrx_oai.onnx
plugins/neural_receiver/scripts/: build-trt-plans.sh
plugins/neural_receiver/src/: CMakeLists.txt  nr_receiver_capture.c  nr_receiver_defs.h  nr_receiver_extern.h  nr_receiver_load.c  nr_receiver_trt.c
plugins/neural_receiver/src/runtime/: CMakeLists.txt  data_processing.cu  data_processing.h  trt_receiver.cpp
plugins/neural_receiver/tests/: test_nrx.ipynb
plugins/neural_receiver/tests/integration/: run_integration.sh
plugins/neural_receiver/tests/unit/: conftest.py  test_data_processing.py  test_receiver.py
plugins/ric_xapps/: tutorial.yaml
plugins/ric_xapps/doc/: index.rst
plugins/ric_xapps/src/: monitor_mcs.py  zmq_stats_client.py  zmq_stats_server.py
plugins/ric_xapps/tests/integration/: run_integration.sh
plugins/testing/: run_all_tests.sh
plugins/testing/configs/: pytest.common.ini
plugins/testing/framework/: __init__.py  manifest_loader.py  test_runner.py
scripts/: activate_tutorial.py  build-cn5g-images.sh  build-custom-kernel.sh  build-oai-images.sh  configure-system.agx-orin.sh  configure-system.agx-thor.sh  configure-system.dgx-spark.sh  configure-system.orin-nano.sh  configure-system.sh  detect_host.sh  generate-configs.sh  get-config-changes.sh  get-oai-changed-files.sh  get-oai-cn5g-changed-files.sh  get-oai-cn5g-commit-versions.sh  get-oai-commit-versions.sh  install-custom-kernel.sh  install-usrp.sh  license-checks.inc  patch-oai-cn5g.sh  patch-oai-tutorials.sh  patch-oai.sh  quickstart-cn5g.sh  quickstart-oai.sh  show_build_errors.sh  start_channel_emulation_demo.sh  start_mps.sh  start_system.sh  stop_mps.sh  stop_system.sh
tutorials/: CMakeLists.txt  plugins.c  plugins.h
tutorials/ldpc_cuda/: nr_ldpc_cuda.c
tutorials/ldpc_cuda/python/: numpy_decoder.py
tutorials/ldpc_cuda/runtime/: CMakeLists.txt  ldpc_decoder.cu  ldpc_tables_bg1.h  ldpc_tables_bg2.h
tutorials/ldpc_cuda/test/: build_and_run.sh  conftest.py  run_bler_test.py  run_decoder_test.py
tutorials/neural_demapper/: CMakeLists.txt  DEVELOPING-IN-COMPOSE.md  Modelcard_demapper.md  build-trt-plans.sh  inc-build-oai-cuda-images.sh  nr_demapper_capture.c  nr_demapper_capture.h  nr_demapper_defs.h  nr_demapper_load.c  nr_demapper_orig.c  nr_demapper_orig.h  nr_demapper_trt.c  nr_demapper_trt.h
tutorials/neural_demapper/configs/: README.md  docker-compose.override.yaml
tutorials/neural_demapper/runtime/: CMakeLists.txt  trt_demapper.cpp
tutorials/neural_demapper/tests/: build_and_run.sh  pytest.ini  test_data_processing.py  test_demappers.py
(+73 files in other folders)
